--- a/styles.css
+++ b/styles.css
@@ -1,137 +1,86 @@
 * {
   margin: 0;
   padding: 0;
-  font-weight: 400;
+  font-family: "Fragment Mono", monospace;
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 500;
+}
+*::-moz-selection {
+  background-color: #0000FF;
+  color: #fff;
+}
+*::selection {
+  background-color: #0000FF;
+  color: #fff;
 }
 
 body {
   display: grid;
+  gap: 15px;
+  padding: 30px;
+}
+
+.hidden {
+  display: none !important;
 }
 
 html,
 html[data-theme=light] {
   color-scheme: light;
-  color: #111;
-  background-color: #fafafa;
+  color: #000;
+  background-color: #fff;
 }
 html *:focus-visible,
 html[data-theme=light] *:focus-visible {
-  outline-color: #111;
-}
-html h1,
-html[data-theme=light] h1 {
-  color: #fafafa;
-}
-html .full-text,
-html[data-theme=light] .full-text {
-  background-color: #fafafa;
+  outline-color: #000;
 }
 html a,
 html[data-theme=light] a {
-  color: #111;
+  color: #0000FF;
+}
+html #needle,
+html[data-theme=light] #needle {
+  background: #000;
 }
 
 html[data-theme=dark] {
   color-scheme: dark;
-  color: #fafafa;
-  background-color: #111;
+  color: #b3aca6;
+  background-color: #000;
 }
 html[data-theme=dark] *:focus-visible {
-  outline-color: #fafafa;
-}
-html[data-theme=dark] h1 {
-  color: #111;
-}
-html[data-theme=dark] .full-text {
-  background-color: #111;
+  outline-color: #000;
 }
 html[data-theme=dark] a {
-  color: #fafafa;
+  color: #fff;
+}
+html[data-theme=dark] #needle {
+  background: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
   html:not([data-theme]) {
     color-scheme: dark;
-    color: #fafafa;
-    background-color: #111;
+    color: #b3aca6;
+    background-color: #000;
   }
   html:not([data-theme]) *:focus-visible {
-    outline-color: #fafafa;
-  }
-  html:not([data-theme]) h1 {
-    color: #111;
-  }
-  html:not([data-theme]) .full-text {
-    background-color: #111;
+    outline-color: #000;
   }
   html:not([data-theme]) a {
-    color: #fafafa;
+    color: #fff;
+  }
+  html:not([data-theme]) #needle {
+    background: #fff;
   }
 }
-h1 {
-  font-size: 14vw;
-  font-family: "Helvetica", sans-serif;
-  font-weight: bold;
-  line-height: 1;
-  text-transform: uppercase;
-  padding: 3% 5% 5% !important;
-  margin-top: 2%;
-}
-@media only screen and (max-width: 767px) {
-  h1 {
-    margin-top: 3%;
-  }
-}
-@media only screen and (max-width: 599px) {
-  h1 {
-    margin-top: 4%;
-  }
-}
-
-h2, .full-text {
-  font-family: "Fragment Mono", monospace;
-  font-size: 3vw;
-  line-height: 1.6;
-}
-
-.full-text {
-  padding: 10% 5% !important;
-}
-
-#page {
-  width: 100%;
-}
-
-section {
-  width: 50%;
-  margin: 0 auto 8%;
-}
-section:last-of-type {
-  margin: 0;
-}
-
-.full {
-  width: 100%;
-}
-
-.image {
-  position: absolute;
-  z-index: -1000;
-}
-
-.image, .project {
-  display: block;
-  width: 100%;
-}
-
-.text {
-  position: relative;
-  padding: 3% 0% 5%;
+h2 {
+  margin-top: 15px;
 }
 
 a {
   text-decoration: underline;
-  text-underline-offset: 6px;
 }
 a:hover {
   text-decoration: none;
@@ -139,80 +88,115 @@ a:hover {
 a:active {
   opacity: 0;
 }
+a:visited {
+  text-decoration: none;
+}
 
-#bisnoni button {
+ul {
+  display: grid;
+  gap: 5px;
+}
+
+li {
+  list-style: square;
+}
+
+iframe {
+  margin-top: 30px;
+}
+iframe:first-of-type {
+  margin-top: 15px;
+}
+
+button {
   background: none;
   border: none;
   cursor: pointer;
 }
-#bisnoni .content {
-  padding: 30px;
-  display: grid;
-  gap: 20px;
-}
-#bisnoni .button-group {
+
+.button-group {
   display: flex;
   gap: 10px;
+  margin-top: 15px;
 }
-#bisnoni p {
-  font-family: "Fragment Mono", monospace;
-  font-size: 11px;
-  line-height: 17px;
-  max-width: 510px;
-}
-#bisnoni .menu-item {
+
+#content-en, #content-it {
   display: grid;
-  gap: 0;
+  gap: 15px;
 }
-#bisnoni .menu-item div {
+
+.inline-text-group {
   display: flex;
   gap: 5px;
 }
-#bisnoni #content-en, #bisnoni #content-it {
-  display: grid;
-  gap: 20px;
-}
-#bisnoni a {
-  color: blue;
-}
 
-#music {
-  padding: 100px 30px;
-}
-#music section {
+#tuner-container {
   width: 100%;
-  max-width: 800px;
-  margin-bottom: 75px;
-}
-#music section:last-of-type {
-  margin: 0 auto;
-}
-#music h1, #music h2 {
-  font-size: 20px;
-  line-height: 1.6;
-  font-weight: bold;
-  color: #111;
-  margin: 0;
-  padding: 0 !important;
-}
-#music p {
-  font-family: "Fragment Mono", monospace;
-  font-size: 14px;
-  line-height: 1.6;
-}
-#music h3 {
-  font-family: "Fragment Mono", monospace;
-  font-size: 16px;
-  line-height: 1.6;
-  margin-top: 5px;
-}
-#music iframe {
-  margin-bottom: 10px;
-}
-#music .link-group {
-  margin-top: 10px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 15px;
+  text-align: center;
 }
 
-.hidden {
-  display: none !important;
+#needle-container {
+  width: 100%;
+  height: 25px;
+  margin: 0 auto 30px;
+  position: relative;
+  background: transparent;
+}
+
+#needle {
+  width: 2px;
+  height: 30px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transition: left 0.125s ease-in-out;
+}
+
+#tuning-select {
+  padding: 5px;
+  margin: 30px auto 0;
+  border: 0;
+  outline: 1px solid;
+  border-right: 5px solid transparent;
+}
+
+#instrument-container select, #instrument-container button, #instrument-container input {
+  padding: 5px;
+  width: 100%;
+  box-sizing: border-box;
+  outline: none;
+  background-color: transparent;
+}
+#instrument-container button {
+  border: 1px solid;
+}
+#instrument-container label {
+  display: block;
+  margin-top: 15px;
+}
+
+#sketch-controls {
+  position: fixed;
+  bottom: 20px;
+  z-index: 10;
+  justify-self: center;
+  width: calc(100% - 40px);
+  justify-content: space-between;
+}
+#sketch-controls button {
+  border: 1px solid #000;
+  padding: 3px 7px;
+}
+
+#drawingCanvas {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: white;
 }/*# sourceMappingURL=styles.css.map */
