--- a/styles.css
+++ b/styles.css
@@ -198,5 +198,5 @@ button {
   position: absolute;
   top: 0;
   left: 0;
-  background: white;
+  background: #b3aca6;
 }/*# sourceMappingURL=styles.css.map */
