--- a/styles.scss
+++ b/styles.scss
@@ -205,5 +205,6 @@ button {
     position: absolute;
     top: 0;
     left: 0;
-    background: $color-mid;
+    background: $color-light;
+    cursor: crosshair;
 }
