--- a/styles.css
+++ b/styles.css
@@ -181,7 +181,7 @@ button {
 }
 
 #sketch-controls {
-  position: fixed;
+  position: absolute;
   bottom: 20px;
   z-index: 10;
   justify-self: center;
@@ -189,6 +189,7 @@ button {
   justify-content: space-between;
 }
 #sketch-controls button {
+  background-color: #fff;
   border: 1px solid #000;
   padding: 3px 7px;
 }
@@ -200,4 +201,5 @@ button {
   left: 0;
   background: #fff;
   cursor: crosshair;
+  touch-action: none;
 }/*# sourceMappingURL=styles.css.map */
