--- a/styles.scss
+++ b/styles.scss
@@ -193,6 +193,9 @@ button {
 }
 
 #instrument-container {
+    .button-group {
+        flex-wrap: wrap;
+    }
     button {
         padding: 20px;
         width: 100%;
@@ -201,10 +204,27 @@ button {
         background-color: transparent;
         border: 1px solid;
         transition: all 0.125s;
+        flex: 1 1 5%;
     }
     label {
         display: block;
         margin-top: 15px;
+    }
+    #current-selection {
+        text-align: center;
+        font-size: 650%;
+        line-height: 1;
+        margin: 10vh 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #toggle {
+        position: absolute;
+        bottom: 30px;
+        width: calc(100% - 60px);
     }
 }
 
