--- a/styles.scss
+++ b/styles.scss
@@ -57,6 +57,10 @@ body {
             box-shadow: inset 3px 3px 0 $color-dark;
         }
     }
+    .active {
+        color: $color-light;
+        background-color: $color-dark;
+    }
 }
 @mixin theme-dark() {
     color-scheme: dark;
@@ -82,6 +86,10 @@ body {
         &:active {
             box-shadow: inset 3px 3px 0 $color-light;
         }
+    }
+    .active {
+        color: $color-dark;
+        background-color: $color-light;
     }
 }
   
@@ -195,33 +203,22 @@ button {
 #instrument-container {
     .button-group {
         flex-wrap: wrap;
+        margin-top: 0;
     }
     button {
         padding: 20px;
         width: 100%;
         box-sizing: border-box;
         outline: none;
-        background-color: transparent;
         border: 1px solid;
         transition: all 0.125s;
         flex: 1 1 5%;
     }
-    label {
+    p {
         display: block;
         margin-top: 15px;
     }
-    #current-selection {
-        text-align: center;
-        font-size: 650%;
-        line-height: 1;
-        margin: 10vh 0;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    #toggle {
+    #startStop {
         position: absolute;
         bottom: 30px;
         width: calc(100% - 60px);
