--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,8 @@ li {
 iframe {
   margin: 5px 0 15px;
   border: 0;
-  width: 600px;
+  width: 100%;
+  max-width: 600px;
   height: 120px;
   display: block;
 }
