--- a/styles.scss
+++ b/styles.scss
@@ -143,7 +143,8 @@ li {
 iframe {
     margin: 5px 0 15px;
     border: 0;
-    width: 600px;
+    width: 100%;
+    max-width: 600px;
     height: 120px;
     display: block;
 }
