--- a/styles.scss
+++ b/styles.scss
@@ -27,6 +27,10 @@ body {
     display: grid;
     gap: 15px;
     padding: 30px;
+
+    &#gallery {
+        display: block;
+    }
 }
 
 .hidden {
@@ -275,4 +279,16 @@ h1, h2, h3 {
     background: $color-light;
     cursor: crosshair;
     touch-action: none;
+}
+
+#gallery-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
+    grid-auto-rows: minmax(50px, auto);
+    gap: 30px;
+    margin-top: 30px;
+    img {
+        width: 100%;
+        image-rendering: crisp-edges;
+    }
 }
